# Rommer

./: README.md  parserdb.py  pyproject.toml  sample.py
Rommer/core/: file_handler.py  n64.py  parse_meta.py  rom.py
Rommer/utils/: constants.py  file.py  spider.py
data/namemap/: Arcade.csv  Bandai - WonderSwan Color.csv  Bandai - WonderSwan.csv  Microsoft - MSX2.csv  NEC - PC Engine - TurboGrafx 16.csv  NEC - PC Engine CD - TurboGrafx-CD.csv  NEC - PC-FX.csv  Nintendo - Game Boy Advance.csv  Nintendo - Game Boy Color.csv  Nintendo - Game Boy.csv  Nintendo - Nintendo 3DS.csv  Nintendo - Nintendo 64.csv  Nintendo - Nintendo DS.csv  Nintendo - Nintendo Entertainment System.csv  Nintendo - Pokemon Mini.csv  Nintendo - Super Nintendo Entertainment System.csv  Nokia - N-Gage.csv  SNK - Neo Geo Pocket Color.csv  SNK - Neo Geo Pocket.csv  Sega - Dreamcast.csv  Sega - Game Gear.csv  Sega - Mega Drive - Genesis.csv  Sega - Mega-CD - Sega CD.csv  Sega - Saturn.csv  Sony - PlayStation Portable.csv  Sony - PlayStation Vita.csv  Sony - PlayStation.csv  The 3DO Company - 3DO.csv
tools/: ciso.py  n64swap.py  parserdb.py
