[project] 
name = "Rommer"
version = "0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [

]

[tool.ruff]
exclude = ["*.ipynb"]
line-length = 120
indent-width = 4

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = ["E501", "E722", "SIM300"]

[tool.ruff.lint.isort]
length-sort = true

[tool.coverage.run]
branch = true
relative_files = true
source = ["basket_generator"]
data_file = "tempData/.coverage"

[tool.coverage.report]
skip_empty = true
fail_under = 60

[tool.coverage.html]
directory = "tempData/coverage_html"